force-app/main/default/objects/Deal_Opportunity__c/Deal_Opportunity__c.object-meta.xml
<CustomObject>
<label
  >Deal Opportunity</label><pluralLabel>Deal Opportunities</pluralLabel>
    <nameField><displayFormat>DOP-{00000000}</displayFormat><label
    >Deal Opportunity Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>