force-app/main/default/objects/Deal_Opportunity__c/fields/Current__c.field-meta.xml
<CustomField><fullName
  >Current__c</fullName><defaultValue>true</defaultValue><label
  >Current</label><type>Checkbox</type></CustomField>