force-app/main/default/objects/Deal_Opportunity__c/fields/Deal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Participant__c</fullName>
    <label>Deal Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Deal Opportunities</relationshipLabel>
    <relationshipName>Deal_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>