force-app/main/default/objects/Deal_Opportunity__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Opportunities (Partner)</relationshipLabel>
    <relationshipName>Deal_Opportunities_Partner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>