force-app/main/default/objects/Deal_Opportunity__c/fields/Previous_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Previous_Relationship__c</fullName>
    <description>Points at the Deal_Opportunity__c row this one replaces, when
  Relationship_Type__c = 'Replacement' - lineage only, not a version
  chain (each row is otherwise independent).</description>
    <label>Previous Relationship</label>
    <type>Lookup</type>
    <referenceTo>Deal_Opportunity__c</referenceTo>
    <relationshipLabel>Superseding Relationships</relationshipLabel>
    <relationshipName>Superseding_Relationships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>