force-app/main/default/objects/Deal_Opportunity__c/fields/Relationship_Key__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Key__c</fullName>
    <description
  >DealId|OpportunityId. Unique so the same Opportunity can never be
  linked twice to the same Deal, regardless of Relationship_Type__c.</description>
    <externalId>true</externalId>
    <label>Relationship Key</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>