force-app/main/default/objects/Deal_Opportunity__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Primary</fullName><default>false</default><label
        >Primary</label></value>
            <value><fullName>Secondary</fullName><default>false</default><label
        >Secondary</label></value>
            <value><fullName>Expansion</fullName><default>false</default><label
        >Expansion</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label
        >Renewal</label></value>
            <value><fullName>Regional</fullName><default>false</default><label
        >Regional</label></value>
            <value><fullName>Product</fullName><default>false</default><label
        >Product</label></value>
            <value><fullName>Services</fullName><default>false</default><label
        >Services</label></value>
            <value><fullName>Co-Sell</fullName><default>false</default><label
        >Co-Sell</label></value>
            <value><fullName>Replacement</fullName><default
        >false</default><label>Replacement</label></value>
            <value><fullName>Historical</fullName><default>false</default><label
        >Historical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>